--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -105,60 +105,20 @@ jobs:
       - uses: ./.github/actions/setup
       - uses: ./.github/actions/playwright
 
-      - name: Find PR number
-        id: find-pr
-        uses: actions/github-script@v7
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          script: |
-            const { data: pulls } = await github.rest.pulls.list({
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              state: 'open'
-            });
-            const pr = pulls.find(p => p.head.sha === process.env.GITHUB_SHA);
-            if (pr) {
-              console.log(`Found PR #${pr.number}`);
-              core.setOutput('pr_number', pr.number.toString());
-            } else {
-              console.log('No PR found for this commit');
-            }
-
       - name: Test Storybook
         id: test-run
         run: pnpm run test:storybook
 
-      - name: Upload Storybook Results
+      - name: Report Storybook Results
         if: always() && hashFiles('storybook-e2e-html-report/**') != ''
-        id: upload-results
-        uses: shallwefootball/s3-upload-action@master
-        with:
-          aws_key_id: ${{ secrets.AWS_KEY_ID }}
-          aws_secret_access_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws_bucket: apadana-e2e
-          source_dir: 'storybook-e2e-html-report'
-          destination_dir: ${{ github.sha }}/storybook
-
-      - name: Process Storybook Report URL
-        id: process-storybook-url
-        if: steps.upload-results.outputs.object_locations
-        uses: actions/github-script@v7
-        with:
-          script: |
-            const locations = JSON.parse(process.env.LOCATIONS);
-            const htmlUrl = locations.find(location => location.endsWith('storybook/index.html'));
-            if (!htmlUrl) { console.log("No index.html found"); }
-            core.setOutput('report_url', htmlUrl);
-        env:
-          LOCATIONS: ${{ steps.upload-results.outputs.object_locations }}
-
-      - name: Create a Check with the Report URL
-        if: always() && steps.process-storybook-url.outputs.report_url
         uses: ./.github/actions/test-report
         with:
           app-id: '1100607'
           test-name: 'Storybook Results'
           test-outcome: ${{ steps.test-run.outcome }}
-          report-url: ${{ steps.process-storybook-url.outputs.report_url }}
           private-key: ${{ secrets.APADANA_AUTOMATION_GITHUB_APP_PRIVATE_KEY }}
+          aws_key_id: ${{ secrets.AWS_KEY_ID }}
+          aws_secret_access_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws_bucket: apadana-e2e
+          source_dir: 'storybook-e2e-html-report'
+          destination_dir: ${{ github.sha }}/storybook
