--- a/package.json
+++ b/package.json
@@ -55,13 +55,19 @@
     "cdk:deploy": "cdk deploy --app 'tsx config/aws-setup/cdk.ts'",
     "cdk:deploy:bootstrap": "STACK_TYPE=bootstrap cdk deploy ApadanaBootstrapStack --app 'tsx config/aws-setup/cdk.ts'",
     "cdk:deploy:resources": "STACK_TYPE=resources cdk deploy --all --app 'tsx config/aws-setup/cdk.ts'",
+    "cdk:deploy:resources:ci": "STACK_TYPE=resources cdk deploy --all --require-approval never --app 'tsx config/aws-setup/cdk.ts'",
     "cdk:destroy": "cdk destroy --app 'tsx config/aws-setup/cdk.ts'",
     "cdk:diff": "cdk diff --app 'tsx config/aws-setup/cdk.ts'",
-    "cdk:synth": "cdk synth --app 'tsx config/aws-setup/cdk.ts'"
+    "cdk:synth": "cdk synth --app 'tsx config/aws-setup/cdk.ts'",
+    "aws:env": "tsx config/aws-setup/get-config.ts",
+    "aws:env:prod": "tsx config/aws-setup/get-config.ts"
   },
   "dependencies": {
     "@adobe/react-spectrum": "^3.38.1",
+    "@aws-sdk/client-memorydb": "^3.716.0",
+    "@aws-sdk/client-rds": "^3.719.1",
     "@aws-sdk/client-s3": "^3.717.0",
+    "@aws-sdk/client-secrets-manager": "^3.716.0",
     "@aws-sdk/s3-request-presigner": "^3.717.0",
     "@dnd-kit/core": "^6.3.1",
     "@dnd-kit/sortable": "^10.0.0",
