--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,9 @@
 {
-  "version": 2,
   "buildCommand": "sh src/scripts/build-vercel.sh",
-  "ignoreCommand": "git diff HEAD^ HEAD --quiet -- ./",
-  "devCommand": "pnpm dev",
   "installCommand": "pnpm install",
   "framework": "nextjs",
-  "outputDirectory": ".next"
+  "regions": ["sfo1"],
+  "env": {
+    "NEXT_PUBLIC_APP_URL": "https://apadana.app"
+  }
 }
