--- a/package.json
+++ b/package.json
@@ -141,6 +141,8 @@
     "zod-prisma-types": "^3.2.1"
   },
   "devDependencies": {
+    "@aws-sdk/client-iam": "^3.716.0",
+    "@aws-sdk/credential-provider-ini": "^3.716.0",
     "@octokit/auth-app": "^7.1.3",
     "@octokit/rest": "^21.0.2",
     "@playwright/test": "^1.49.1",
@@ -199,9 +201,7 @@
     "tsx": "^4.19.2",
     "typescript": "~5.7.2",
     "vite-tsconfig-paths": "^4.3.2",
-    "vitest": "^2.1.8",
-    "@aws-sdk/client-iam": "^3.485.0",
-    "@aws-sdk/credential-provider-ini": "^3.485.0"
+    "vitest": "^2.1.8"
   },
   "lint-staged": {
     "*.{js,jsx,ts,tsx},!src/prisma/zod/**": [
