--- a/package.json
+++ b/package.json
@@ -1,83 +1,135 @@
 {
   "name": "apadana",
-  "version": "0.1.0",
+  "version": "1.1.1",
   "private": true,
   "scripts": {
-    "script": "tsx src/lib/script-runner/runner.mts"
+    "script": "tsx src/lib/script-runner/runner.mts",
+    "start": "pnpm run setup:local && DOCKER_BUILDKIT=1 COMPOSE_DOCKER_CLI_BUILD=1 docker-compose -f src/docker/docker-compose.yml up --build",
+    "docker:prune": "docker system prune -af --volumes",
+    "docker:clean": "docker-compose -f src/docker/docker-compose.yml down -v",
+    "docker:down": "docker-compose -f src/docker/docker-compose.yml down",
+    "docker:build": "DOCKER_BUILDKIT=1 docker-compose -f src/docker/docker-compose.yml build --parallel",
+    "docker:prod:rebuild": "docker-compose -f src/docker/docker-compose.yml build app_prod --parallel",
+    "docker:prod:restart": "docker-compose -f src/docker/docker-compose.yml up -d --no-deps app_prod",
+    "docker:prod:redeploy": "pnpm docker:prod:rebuild && pnpm docker:prod:restart",
+    "next:start": "next start",
+    "predev": "pnpm prisma:generate && pnpm prisma:migrate",
+    "dev": "concurrently --color --prefix-colors \"blue.bold,magenta.bold,green.bold,yellow.bold,cyan.bold\" npm:dev:*",
+    "dev:next": "next dev --turbo",
+    "dev:storybook": "storybook dev --quiet --port=6006 --no-open | grep -v -iE 'info|warn' | grep -v '^$'",
+    "dev:prisma": "prisma generate --schema=src/prisma/schema.prisma --no-hints --watch",
+    "dev:prisma:seed": "prisma db seed",
+    "dev:prisma:studio": "nodemon --watch prisma/schema.prisma --exec 'prisma studio --schema=src/prisma/schema.prisma --browser none'",
+    "dev:prisma:migrate": "prisma migrate dev --schema=src/prisma/schema.prisma --name $(date +%Y%m%d%H%M%S)",
+    "prisma:generate": "prisma generate --schema=src/prisma/schema.prisma --no-hints",
+    "prisma:watch": "pnpm prisma generate --schema=src/prisma/schema.prisma --watch",
+    "prisma:migrate": "prisma migrate deploy --schema=src/prisma/schema.prisma",
+    "build": "prisma generate --schema=src/prisma/schema.prisma --no-hints && next build",
+    "fix": "concurrently --color --prefix-colors \"blue.bold,magenta.bold,green.bold,yellow.bold,cyan.bold\" 'pnpm lint --fix' 'pnpm format'",
+    "lint": "eslint --config=config/eslint.config.mjs",
+    "lint:strict": "eslint --max-warnings=0 --config=config/eslint.config.mjs",
+    "format": "prettier -w **/*.{json,css,md,webmanifest,yml,yaml}",
+    "format:check": "prettier -c **/*.{json,css,md,webmanifest,yml,yaml}",
+    "typecheck": "pnpm prisma:generate && tsc --noEmit --incremental false",
+    "test": "vitest run --config=config/vitest.config.ts",
+    "test:watch": "vitest --config=config/vitest.config.ts",
+    "test:coverage": "vitest run --coverage --config=config/vitest.config.ts",
+    "test:ui": "vitest --ui --config=config/vitest.config.ts",
+    "e2e": "BASE_URL=https://prod.apadana.local E2E_TESTING_SECRET=e2e_testing_secret_for_prod playwright test --config=src/e2e/playwright.config.ts",
+    "e2e:dev": "BASE_URL=https://dev.apadana.local E2E_TESTING_SECRET=e2e_testing_secret_for_dev playwright test --config=src/e2e/playwright.config.ts",
+    "e2e:ci": "playwright test --config=src/e2e/playwright.config.ts",
+    "e2e:prod": "BASE_URL=https://www.apadana.app playwright test --config=src/e2e/playwright.config.ts",
+    "postbuild": "next-sitemap --config config/next-sitemap.config.js",
+    "prepare": "husky install",
+    "storybook": "storybook dev -p 6006 --quiet",
+    "build-storybook": "storybook build",
+    "test:cleanup": "docker-compose -f src/docker/docker-compose.test.yml down",
+    "setup:local": "tsx src/scripts/setup-local-dev.ts",
+    "update-packages": "tsx src/scripts/update-packages.ts",
+    "serialize-repo": "tsx src/scripts/serialize-repo.ts",
+    "docker:dev": "DOCKER_BUILDKIT=1 docker-compose -f src/docker/docker-compose.yml up app_dev",
+    "docker:prod": "DOCKER_BUILDKIT=1 docker-compose -f src/docker/docker-compose.yml up app_prod",
+    "test:storybook": "playwright test --config=config/playwright.storybook.config.ts",
+    "test:storybook:update": "playwright test --config=config/playwright.storybook.config.ts --update-snapshots"
   },
   "dependencies": {
-    "@aws-sdk/client-s3": "^3.705.0",
-    "@aws-sdk/s3-request-presigner": "^3.705.0",
+    "@adobe/react-spectrum": "^3.38.1",
+    "@aws-sdk/client-s3": "^3.717.0",
+    "@aws-sdk/s3-request-presigner": "^3.717.0",
     "@dnd-kit/core": "^6.3.1",
-    "@dnd-kit/sortable": "^8.0.0",
+    "@dnd-kit/sortable": "^10.0.0",
     "@dnd-kit/utilities": "^3.2.2",
     "@faker-js/faker": "^9.3.0",
     "@hookform/resolvers": "^3.9.1",
     "@internationalized/date": "^3.6.0",
-    "@prisma/client": "^5.22.0",
+    "@prisma/client": "^6.1.0",
     "@radix-ui/react-alert-dialog": "^1.1.2",
-    "@radix-ui/react-avatar": "^1.1.1",
-    "@radix-ui/react-checkbox": "^1.1.2",
-    "@radix-ui/react-dialog": "^1.1.2",
-    "@radix-ui/react-label": "^2.1.0",
-    "@radix-ui/react-popover": "^1.1.2",
-    "@radix-ui/react-progress": "^1.1.0",
-    "@radix-ui/react-radio-group": "^1.2.1",
-    "@radix-ui/react-select": "^2.1.2",
-    "@radix-ui/react-separator": "^1.1.0",
-    "@radix-ui/react-slot": "^1.1.0",
-    "@radix-ui/react-switch": "^1.1.1",
-    "@radix-ui/react-tabs": "^1.1.1",
-    "@radix-ui/react-toast": "^1.2.2",
-    "@radix-ui/react-tooltip": "^1.1.4",
-    "@react-email/components": "^0.0.28",
-    "@react-email/tailwind": "^1.0.3",
-    "@react-google-maps/api": "^2.20.3",
+    "@radix-ui/react-avatar": "^1.1.2",
+    "@radix-ui/react-checkbox": "^1.1.3",
+    "@radix-ui/react-dialog": "^1.1.4",
+    "@radix-ui/react-dropdown-menu": "^2.1.4",
+    "@radix-ui/react-label": "^2.1.1",
+    "@radix-ui/react-popover": "^1.1.4",
+    "@radix-ui/react-progress": "^1.1.1",
+    "@radix-ui/react-radio-group": "^1.2.2",
+    "@radix-ui/react-scroll-area": "^1.2.2",
+    "@radix-ui/react-select": "^2.1.4",
+    "@radix-ui/react-separator": "^1.1.1",
+    "@radix-ui/react-slot": "^1.1.1",
+    "@radix-ui/react-switch": "^1.1.2",
+    "@radix-ui/react-tabs": "^1.1.2",
+    "@radix-ui/react-toast": "^1.2.4",
+    "@radix-ui/react-tooltip": "^1.1.6",
+    "@react-email/components": "^0.0.31",
+    "@react-email/tailwind": "^1.0.4",
+    "@react-google-maps/api": "^2.20.5",
     "@storybook/addon-themes": "^8.4.7",
     "@types/lodash": "^4.17.13",
+    "@types/semver": "^7.5.8",
+    "@types/yargs": "^17.0.33",
     "@vercel/analytics": "^1.4.1",
-    "@vercel/postgres": "^0.10.0",
     "@vercel/speed-insights": "^1.1.0",
     "axios": "^1.7.9",
-    "chalk": "^5.3.0",
+    "chalk": "^4.1.2",
+    "cheerio": "^1.0.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "commander": "^11.0.0",
-    "date-fns": "^3.6.0",
+    "date-fns": "^4.1.0",
     "date-fns-tz": "^3.2.0",
-    "dotenv-cli": "^7.4.4",
-    "glob": "^11.0.0",
-    "js-yaml": "^4.1.0",
+    "fast-glob": "^3.3.2",
+    "framer-motion": "^11.15.0",
+    "ignore": "^7.0.0",
     "lodash": "^4.17.21",
-    "lucide-react": "^0.439.0",
-    "next": "15.0.3",
-    "next-safe-action": "^7.9.9",
+    "lucide-react": "^0.469.0",
+    "next": "15.1.3",
+    "next-safe-action": "^7.10.2",
     "next-themes": "^0.3.0",
     "oslo": "^1.2.1",
-    "prisma": "^5.22.0",
+    "prisma": "^6.1.0",
     "qs": "^6.13.1",
     "react": "19.0.0-rc-66855b96-20241106",
     "react-aria": "^3.36.0",
     "react-dom": "19.0.0-rc-66855b96-20241106",
-    "react-hook-form": "^7.54.0",
+    "react-hook-form": "^7.54.2",
     "react-icons": "^5.4.0",
     "react-stately": "^3.34.0",
     "resend": "^4.0.1",
     "slugify": "^1.6.6",
-    "tailwind-merge": "^2.5.5",
-    "tailwindcss": "^3.4.16",
-    "tailwindcss-animate": "^1.0.7",
-    "tsx": "^4.19.2",
+    "strip-ansi": "^7.1.0",
+    "sudo-prompt": "^9.2.1",
+    "tailwind-merge": "^2.6.0",
+    "tailwindcss": "^3.4.17",
     "uvcanvas": "^0.2.2",
-    "yaml": "^2.3.1",
     "yargs": "^17.7.2",
     "yet-another-react-lightbox": "^3.21.7",
-    "zod": "^3.23.8"
+    "zod": "^3.24.1",
+    "zod-prisma-types": "^3.2.1"
   },
   "devDependencies": {
-    "@actions/core": "^1.11.1",
-    "@chromatic-com/storybook": "^1.9.0",
-    "@playwright/test": "^1.49.0",
+    "@octokit/auth-app": "^7.1.3",
+    "@octokit/rest": "^21.0.2",
+    "@playwright/test": "^1.49.1",
+    "@react-types/provider": "^3.8.5",
     "@storybook/addon-essentials": "^8.4.7",
     "@storybook/addon-interactions": "^8.4.7",
     "@storybook/addon-links": "^8.4.7",
@@ -90,50 +142,55 @@
     "@testcontainers/postgresql": "^10.16.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.1.0",
-    "@types/js-yaml": "^4.0.9",
-    "@types/node": "^22.10.1",
+    "@types/node": "^22.10.2",
     "@types/qs": "^6.9.17",
     "@types/react": "npm:types-react@19.0.0-rc.1",
-    "@types/yargs": "^17.0.33",
-    "@typescript-eslint/eslint-plugin": "^5.62.0",
-    "@typescript-eslint/parser": "^5.62.0",
+    "@types/webpack": "^5.28.5",
+    "@typescript-eslint/eslint-plugin": "^8.18.2",
+    "@typescript-eslint/parser": "^8.18.2",
     "@vitejs/plugin-react": "^4.3.4",
-    "@vitest/coverage-v8": "^1.6.0",
-    "@vitest/ui": "^1.6.0",
+    "@vitest/coverage-v8": "^2.1.8",
+    "@vitest/ui": "^2.1.8",
     "autoprefixer": "^10.4.20",
-    "concurrently": "^8.2.2",
+    "concurrently": "^9.1.1",
     "dotenv": "^16.4.7",
-    "eslint": "^8.57.1",
-    "eslint-config-next": "15.0.3",
-    "eslint-config-prettier": "^8.10.0",
-    "eslint-plugin-simple-import-sort": "^7.0.0",
-    "eslint-plugin-storybook": "^0.8.0",
-    "eslint-plugin-unused-imports": "^2.0.0",
+    "eslint": "^9.17.0",
+    "eslint-config-next": "^15.1.3",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.2.1",
+    "eslint-plugin-react": "^7.37.3",
+    "eslint-plugin-simple-import-sort": "^12.1.1",
+    "eslint-plugin-storybook": "^0.11.1",
+    "eslint-plugin-unused-imports": "^4.1.4",
     "execa": "^9.5.2",
-    "happy-dom": "^15.11.7",
-    "husky": "^7.0.4",
-    "lint-staged": "^12.5.0",
+    "globals": "^15.14.0",
+    "happy-dom": "^16.0.1",
+    "husky": "^9.1.7",
+    "lint-staged": "^15.3.0",
+    "mkcert": "^3.2.0",
     "next-router-mock": "^0.9.13",
-    "next-sitemap": "^2.5.28",
-    "nodemon": "^3.1.7",
+    "next-sitemap": "^4.2.3",
+    "nodemon": "^3.1.9",
+    "openai-gpt-token-counter": "^1.1.1",
     "postcss": "^8.4.49",
     "postcss-loader": "^8.1.1",
     "prettier": "^3.4.2",
-    "prettier-plugin-tailwindcss": "^0.5.14",
+    "prettier-plugin-tailwindcss": "^0.6.9",
     "storybook": "^8.4.7",
     "testcontainers": "^10.16.0",
-    "typescript": "^5.7.2",
+    "tsx": "^4.19.2",
+    "typescript": "~5.7.2",
     "vite-tsconfig-paths": "^4.3.2",
-    "vitest": "^1.6.0"
+    "vitest": "^2.1.8"
   },
   "lint-staged": {
-    "**/*.{js,jsx,ts,tsx}": [
+    "*.{js,jsx,ts,tsx},!src/prisma/zod/**": [
       "pnpm prisma:generate",
-      "eslint --max-warnings=0",
-      "prettier -w"
+      "eslint --max-warnings=0 --config=config/eslint.config.mjs --fix --cache",
+      "prettier --write"
     ],
-    "**/*.{json,css,scss,md,webmanifest}": [
-      "prettier -w"
+    "*.{json,css,scss,md,webmanifest}": [
+      "prettier --write"
     ]
   },
   "packageManager": "pnpm@9.9.0+sha512.60c18acd138bff695d339be6ad13f7e936eea6745660d4cc4a776d5247c540d0edee1a563695c183a66eb917ef88f2b4feb1fc25f32a7adcadc7aaf3438e99c1",
@@ -143,9 +200,25 @@
     }
   },
   "prisma": {
-    "seed": "tsx --env-file .env.local prisma/seed.ts"
+    "seed": "tsx src/prisma/seed.ts"
   },
-  "bin": {
-    "script": "./src/bin/script.sh"
+  "postcss": {
+    "plugins": {
+      "tailwindcss": {
+        "config": "config/tailwind.config.ts"
+      },
+      "autoprefixer": {}
+    }
+  },
+  "prettier": {
+    "plugins": [
+      "prettier-plugin-tailwindcss"
+    ],
+    "printWidth": 100,
+    "arrowParens": "always",
+    "singleQuote": true,
+    "jsxSingleQuote": true,
+    "tabWidth": 2,
+    "semi": true
   }
 }
