--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,12 +11,7 @@
   },
   "[css]": { "editor.defaultFormatter": "esbenp.prettier-vscode" },
   // Tailwind CSS Autocomplete, add more if used in projects
-  "tailwindCSS.classAttributes": [
-    "class",
-    "className",
-    "classNames",
-    "containerClassName"
-  ],
+  "tailwindCSS.classAttributes": ["class", "className", "classNames", "containerClassName"],
   "typescript.preferences.importModuleSpecifier": "non-relative",
   "files.exclude": {
     "build": true,
@@ -32,5 +27,8 @@
     ".swc": true,
     ".vercel": true,
     "pnpm-lock.yaml": true
+  },
+  "yaml.schemas": {
+    "./schemas/script.schema.json": ["scripts/*/script.yml"]
   }
 }
