--- a/package.json
+++ b/package.json
@@ -84,8 +84,10 @@
     "@react-email/tailwind": "^1.0.4",
     "@react-google-maps/api": "^2.20.5",
     "@storybook/addon-themes": "^8.4.7",
+    "@types/glob": "^8.1.0",
     "@types/lodash": "^4.17.13",
     "@types/semver": "^7.5.8",
+    "@types/yaml": "^1.9.7",
     "@types/yargs": "^17.0.33",
     "@vercel/analytics": "^1.4.1",
     "@vercel/speed-insights": "^1.1.0",
@@ -98,6 +100,7 @@
     "date-fns-tz": "^3.2.0",
     "fast-glob": "^3.3.2",
     "framer-motion": "^11.15.0",
+    "glob": "^11.0.0",
     "ignore": "^7.0.0",
     "lodash": "^4.17.21",
     "lucide-react": "^0.469.0",
@@ -120,6 +123,7 @@
     "tailwind-merge": "^2.6.0",
     "tailwindcss": "^3.4.17",
     "uvcanvas": "^0.2.2",
+    "yaml": "^2.7.0",
     "yargs": "^17.7.2",
     "yet-another-react-lightbox": "^3.21.7",
     "zod": "^3.24.1",
