Fix a few things and lots of improvements

--- a/.gitignore
+++ b/.gitignore
@@ -60,15 +60,15 @@ public/images/e2e/uploads/
 !.env.test
 
 # Do not allow new files in root
-package-updates-summary.md
-*.json
-*.md
-*.fish
-*.sh
-*.log
-*.txt
-*.yaml
-*.yml
+/package-updates-summary.md
+/*.json
+/*.md
+/*.fish
+/*.sh
+/*.log
+/*.txt
+/*.yaml
+/*.yml
 
 # Files that *are* allowed in root
 !README.md
