--- a/package.json
+++ b/package.json
@@ -2,55 +2,26 @@
   "name": "apadana",
   "version": "1.1.1",
   "private": true,
+  "bin": {
+    "script": "src/bin/script"
+  },
   "scripts": {
-    "script": "tsx src/lib/script-runner/runner.mts",
-    "start": "pnpm run setup:local && DOCKER_BUILDKIT=1 COMPOSE_DOCKER_CLI_BUILD=1 docker-compose -f src/docker/docker-compose.yml up --build",
-    "docker:prune": "docker system prune -af --volumes",
-    "docker:clean": "docker-compose -f src/docker/docker-compose.yml down -v",
-    "docker:down": "docker-compose -f src/docker/docker-compose.yml down",
-    "docker:build": "DOCKER_BUILDKIT=1 docker-compose -f src/docker/docker-compose.yml build --parallel",
-    "docker:prod:rebuild": "docker-compose -f src/docker/docker-compose.yml build app_prod --parallel",
-    "docker:prod:restart": "docker-compose -f src/docker/docker-compose.yml up -d --no-deps app_prod",
-    "docker:prod:redeploy": "pnpm docker:prod:rebuild && pnpm docker:prod:restart",
-    "next:start": "next start",
-    "predev": "pnpm prisma:generate && pnpm prisma:migrate",
-    "dev": "concurrently --color --prefix-colors \"blue.bold,magenta.bold,green.bold,yellow.bold,cyan.bold\" npm:dev:*",
-    "dev:next": "next dev --turbo",
-    "dev:storybook": "storybook dev --quiet --port=6006 --no-open | grep -v -iE 'info|warn' | grep -v '^$'",
-    "dev:prisma": "prisma generate --schema=src/prisma/schema.prisma --no-hints --watch",
-    "dev:prisma:seed": "prisma db seed",
-    "dev:prisma:studio": "nodemon --watch prisma/schema.prisma --exec 'prisma studio --schema=src/prisma/schema.prisma --browser none'",
-    "dev:prisma:migrate": "prisma migrate dev --schema=src/prisma/schema.prisma --name $(date +%Y%m%d%H%M%S)",
-    "prisma:generate": "prisma generate --schema=src/prisma/schema.prisma --no-hints",
-    "prisma:watch": "pnpm prisma generate --schema=src/prisma/schema.prisma --watch",
-    "prisma:migrate": "prisma migrate deploy --schema=src/prisma/schema.prisma",
-    "build": "prisma generate --schema=src/prisma/schema.prisma --no-hints && next build",
-    "fix": "concurrently --color --prefix-colors \"blue.bold,magenta.bold,green.bold,yellow.bold,cyan.bold\" 'pnpm lint --fix' 'pnpm format'",
-    "lint": "eslint --config=config/eslint.config.mjs",
-    "lint:strict": "eslint --max-warnings=0 --config=config/eslint.config.mjs",
-    "format": "prettier -w **/*.{json,css,md,webmanifest,yml,yaml}",
-    "format:check": "prettier -c **/*.{json,css,md,webmanifest,yml,yaml}",
-    "typecheck": "pnpm prisma:generate && tsc --noEmit --incremental false",
-    "test": "vitest run --config=config/vitest.config.ts",
-    "test:watch": "vitest --config=config/vitest.config.ts",
-    "test:coverage": "vitest run --coverage --config=config/vitest.config.ts",
-    "test:ui": "vitest --ui --config=config/vitest.config.ts",
-    "e2e": "BASE_URL=https://prod.apadana.local E2E_TESTING_SECRET=e2e_testing_secret_for_prod playwright test --config=src/e2e/playwright.config.ts",
-    "e2e:dev": "BASE_URL=https://dev.apadana.local E2E_TESTING_SECRET=e2e_testing_secret_for_dev playwright test --config=src/e2e/playwright.config.ts",
-    "e2e:ci": "playwright test --config=src/e2e/playwright.config.ts",
-    "e2e:prod": "BASE_URL=https://www.apadana.app playwright test --config=src/e2e/playwright.config.ts",
-    "postbuild": "next-sitemap --config config/next-sitemap.config.js",
-    "prepare": "husky install",
-    "storybook": "storybook dev -p 6006 --quiet",
-    "build-storybook": "storybook build",
-    "test:cleanup": "docker-compose -f src/docker/docker-compose.test.yml down",
-    "setup:local": "tsx src/scripts/setup-local-dev.ts",
-    "update-packages": "tsx src/scripts/update-packages.ts",
-    "serialize-repo": "tsx src/scripts/serialize-repo.ts",
-    "docker:dev": "DOCKER_BUILDKIT=1 docker-compose -f src/docker/docker-compose.yml up app_dev",
-    "docker:prod": "DOCKER_BUILDKIT=1 docker-compose -f src/docker/docker-compose.yml up app_prod",
-    "test:storybook": "playwright test --config=config/playwright.storybook.config.ts",
-    "test:storybook:update": "playwright test --config=config/playwright.storybook.config.ts --update-snapshots"
+    "build": "script build",
+    "dev": "script dev",
+    "docker": "script docker",
+    "e2e": "script e2e",
+    "fix": "script fix",
+    "format": "script format",
+    "lint": "script lint",
+    "migrate": "script migrate",
+    "prepare": "script prepare",
+    "prisma": "script prisma",
+    "setup": "script setup",
+    "sitemap": "script sitemap",
+    "start": "script start",
+    "storybook": "script storybook",
+    "test": "script test",
+    "typecheck": "script typecheck"
   },
   "dependencies": {
     "@adobe/react-spectrum": "^3.38.1",
@@ -91,6 +62,7 @@
     "@types/yargs": "^17.0.33",
     "@vercel/analytics": "^1.4.1",
     "@vercel/speed-insights": "^1.1.0",
+    "ajv": "^8.17.1",
     "axios": "^1.7.9",
     "chalk": "^4.1.2",
     "cheerio": "^1.0.0",
