--- a/scripts/prepare/script.yml
+++ b/scripts/prepare/script.yml
@@ -1,3 +1,4 @@
 default:
-  command: husky install
-  help: Install Git hooks
+  steps:
+    - husky install
+  help: Prepare the repository for development
