--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "cdk:bootstrap": "cdk bootstrap --app 'tsx config/aws-setup/cdk.ts'",
     "cdk:deploy": "cdk deploy --app 'tsx config/aws-setup/cdk.ts'",
     "cdk:deploy:bootstrap": "AWS_DEPLOYMENT_STACK_TYPE=bootstrap cdk deploy ApadanaBootstrapStack --app 'tsx config/aws-setup/cdk.ts'",
+    "cdk:deploy:network": "AWS_DEPLOYMENT_STACK_TYPE=network cdk deploy --all --app 'tsx config/aws-setup/cdk.ts'",
     "cdk:deploy:resources": "AWS_DEPLOYMENT_STACK_TYPE=resources cdk deploy --all --app 'tsx config/aws-setup/cdk.ts'",
     "cdk:deploy:resources:ci": "AWS_DEPLOYMENT_STACK_TYPE=resources cdk deploy --all --require-approval never --app 'tsx config/aws-setup/cdk.ts'",
     "cdk:deploy:shared": "AWS_DEPLOYMENT_STACK_TYPE=shared cdk deploy --all --app 'tsx config/aws-setup/cdk.ts'",
