feat(infra): add AWS infrastructure setup with CDK stacks and deployment scripts

--- a/package.json
+++ b/package.json
@@ -51,18 +51,21 @@
     "test:storybook": "playwright test --config=config/playwright.storybook.config.ts",
     "test:storybook:update": "playwright test --config=config/playwright.storybook.config.ts --update-snapshots",
     "cdk:bootstrap": "cdk bootstrap",
-    "cdk:deploy:bootstrap": "pnpm build && cdk deploy BootstrapStack",
-    "cdk:deploy:resources": "pnpm build && cdk deploy --all",
-    "cdk:deploy": "pnpm build && cdk deploy",
-    "cdk:destroy": "pnpm build && cdk destroy --all",
-    "cdk:diff": "pnpm build && cdk diff",
-    "cdk:synth": "pnpm build && cdk synth",
-    "cdk:preflight": "ts-node --project tsconfig.json config/aws-setup/scripts/preflight.ts",
-    "cdk:deployer:create": "ts-node --project tsconfig.json config/aws-setup/scripts/create-deployer.ts"
+    "cdk:deploy:bootstrap": "cdk deploy BootstrapStack",
+    "cdk:deploy:resources": "cdk deploy --all",
+    "cdk:deploy": "cdk deploy",
+    "cdk:destroy": "cdk destroy --all",
+    "cdk:diff": "cdk diff",
+    "cdk:synth": "cdk synth",
+    "cdk:preflight": "tsx config/aws-setup/scripts/preflight.ts",
+    "cdk:deployer:create": "tsx config/aws-setup/scripts/create-deployer.ts",
+    "cdk:resources:wait": "tsx config/aws-setup/scripts/wait-for-resources.ts"
   },
   "dependencies": {
     "@adobe/react-spectrum": "^3.38.1",
+    "@aws-sdk/client-iam": "^3.485.0",
     "@aws-sdk/client-s3": "^3.717.0",
+    "@aws-sdk/client-sts": "^3.485.0",
     "@aws-sdk/s3-request-presigner": "^3.717.0",
     "@dnd-kit/core": "^6.3.1",
     "@dnd-kit/sortable": "^10.0.0",
@@ -97,11 +100,13 @@
     "@types/yargs": "^17.0.33",
     "@vercel/analytics": "^1.4.1",
     "@vercel/speed-insights": "^1.1.0",
+    "aws-cdk-lib": "^2.115.0",
     "axios": "^1.7.9",
     "chalk": "^4.1.2",
     "cheerio": "^1.0.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "constructs": "^10.3.0",
     "date-fns": "^4.1.0",
     "date-fns-tz": "^3.2.0",
     "fast-glob": "^3.3.2",
@@ -132,10 +137,9 @@
     "yet-another-react-lightbox": "^3.21.7",
     "zod": "^3.24.1",
     "zod-prisma-types": "^3.2.1",
-    "@aws-sdk/client-iam": "^3.485.0",
-    "@aws-sdk/client-sts": "^3.485.0",
-    "aws-cdk-lib": "^2.115.0",
-    "constructs": "^10.3.0"
+    "@aws-sdk/client-cloudformation": "^3.485.0",
+    "@aws-sdk/client-memorydb": "^3.485.0",
+    "@aws-sdk/client-rds": "^3.485.0"
   },
   "devDependencies": {
     "@octokit/auth-app": "^7.1.3",
@@ -164,6 +168,7 @@
     "@vitest/coverage-v8": "^2.1.8",
     "@vitest/ui": "^2.1.8",
     "autoprefixer": "^10.4.20",
+    "aws-cdk": "^2.174.0",
     "concurrently": "^9.1.1",
     "dotenv": "^16.4.7",
     "eslint": "^9.17.0",
