--- a/package.json
+++ b/package.json
@@ -59,11 +59,11 @@
     "cdk:synth": "cdk synth",
     "cdk:preflight": "tsx config/aws-setup/scripts/preflight.ts",
     "cdk:deployer:create": "tsx config/aws-setup/scripts/create-deployer.ts",
-    "cdk:resources:wait": "tsx config/aws-setup/scripts/wait-for-resources.ts"
+    "cdk:wait": "tsx config/aws-setup/scripts/wait-for-ready.ts",
+    "cdk:print-values": "tsx config/aws-setup/scripts/print-deployment-values.ts"
   },
   "dependencies": {
     "@adobe/react-spectrum": "^3.38.1",
-    "@aws-sdk/client-cloudformation": "^3.721.0",
     "@aws-sdk/client-iam": "^3.485.0",
     "@aws-sdk/client-memorydb": "^3.721.0",
     "@aws-sdk/client-rds": "^3.721.0",
@@ -142,6 +142,8 @@
     "zod-prisma-types": "^3.2.1"
   },
   "devDependencies": {
+    "@aws-sdk/client-cloudformation": "^3.721.0",
+    "@aws-sdk/client-secrets-manager": "^3.721.0",
     "@octokit/auth-app": "^7.1.3",
     "@octokit/rest": "^21.0.2",
     "@playwright/test": "^1.49.1",
