--- a/package.json
+++ b/package.json
@@ -64,11 +64,11 @@
   },
   "dependencies": {
     "@adobe/react-spectrum": "^3.38.1",
-    "@aws-sdk/client-iam": "^3.485.0",
-    "@aws-sdk/client-memorydb": "^3.721.0",
-    "@aws-sdk/client-rds": "^3.721.0",
+    "@aws-sdk/client-iam": "3.721.0",
+    "@aws-sdk/client-memorydb": "3.721.0",
+    "@aws-sdk/client-rds": "3.721.0",
     "@aws-sdk/client-s3": "^3.717.0",
-    "@aws-sdk/client-sts": "^3.485.0",
+    "@aws-sdk/client-sts": "3.716.0",
     "@aws-sdk/s3-request-presigner": "^3.717.0",
     "@dnd-kit/core": "^6.3.1",
     "@dnd-kit/sortable": "^10.0.0",
@@ -103,13 +103,13 @@
     "@types/yargs": "^17.0.33",
     "@vercel/analytics": "^1.4.1",
     "@vercel/speed-insights": "^1.1.0",
-    "aws-cdk-lib": "^2.115.0",
+    "aws-cdk-lib": "2.174.0",
     "axios": "^1.7.9",
     "chalk": "^4.1.2",
     "cheerio": "^1.0.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "constructs": "^10.3.0",
+    "constructs": "10.4.2",
     "date-fns": "^4.1.0",
     "date-fns-tz": "^3.2.0",
     "fast-glob": "^3.3.2",
@@ -142,8 +142,8 @@
     "zod-prisma-types": "^3.2.1"
   },
   "devDependencies": {
-    "@aws-sdk/client-cloudformation": "^3.721.0",
-    "@aws-sdk/client-secrets-manager": "^3.721.0",
+    "@aws-sdk/client-cloudformation": "3.721.0",
+    "@aws-sdk/client-secrets-manager": "3.721.0",
     "@octokit/auth-app": "^7.1.3",
     "@octokit/rest": "^21.0.2",
     "@playwright/test": "^1.49.1",
@@ -170,7 +170,7 @@
     "@vitest/coverage-v8": "^2.1.8",
     "@vitest/ui": "^2.1.8",
     "autoprefixer": "^10.4.20",
-    "aws-cdk": "^2.174.0",
+    "aws-cdk": "2.174.0",
     "concurrently": "^9.1.1",
     "dotenv": "^16.4.7",
     "eslint": "^9.17.0",
