feat: add CDK bootstrap scripts and integrate into build process

--- a/package.json
+++ b/package.json
@@ -236,6 +236,9 @@
     "test:ui": "vitest --ui --config=config/vitest.config.ts",
     "test:watch": "vitest --config=config/vitest.config.ts",
     "typecheck": "pnpm prisma:generate && tsc --noEmit --incremental false",
-    "update-packages": "tsx src/scripts/update-packages.ts"
+    "update-packages": "tsx src/scripts/update-packages.ts",
+    "cdk:bootstrap": "cdk bootstrap --cloudformation-execution-policies arn:aws:iam::aws:policy/AdministratorAccess",
+    "cdk:bootstrap:preview": "AWS_DEPLOYMENT_STACK_ENV=preview pnpm cdk:bootstrap",
+    "cdk:bootstrap:production": "AWS_DEPLOYMENT_STACK_ENV=production pnpm cdk:bootstrap"
   }
 }
