--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@react-google-maps/api": "^2.20.5",
     "@storybook/addon-themes": "^8.4.7",
     "@types/lodash": "^4.17.13",
+    "@types/node-forge": "^1.3.11",
     "@types/semver": "^7.5.8",
     "@types/yargs": "^17.0.33",
     "@vercel/analytics": "^1.4.1",
@@ -63,6 +64,7 @@
     "next": "15.1.3",
     "next-safe-action": "^7.10.2",
     "next-themes": "^0.3.0",
+    "node-forge": "^1.3.1",
     "oslo": "^1.2.1",
     "prisma": "^6.1.0",
     "qs": "^6.13.1",
