--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -83,44 +83,8 @@ jobs:
         id: snapshot-diff
         with:
           script: |
-            const fs = require('fs');
-            const path = require('path');
-            // Possible to add other paths here in future
-            const baseDir = 'src/storybook-e2e/__screenshots__/storybook-screenshots.spec.ts';
-
-            function findMissingFiles() {
-              if (!fs.existsSync(path.join(baseDir, 'linux')) || !fs.existsSync(path.join(baseDir, 'darwin'))) {
-                console.log(`Nothing in ${baseDir}`);
-                return '';
-              }
-              
-              const darwinFiles = getAllFiles(path.join(baseDir, 'darwin'));
-              const missingFiles = darwinFiles
-                .map(file => path.relative(path.join(baseDir, 'darwin'), file))
-                .filter(relPath => !fs.existsSync(path.join(baseDir, 'linux', relPath)));
-              
-              return missingFiles;
-            }
-
-            function getAllFiles(dir) {
-              const files = [];
-              const items = fs.readdirSync(dir, { withFileTypes: true });
-              
-              for (const item of items) {
-                const fullPath = path.join(dir, item.name);
-                if (item.isDirectory()) {
-                  files.push(...getAllFiles(fullPath));
-                } else {
-                  files.push(fullPath);
-                }
-              }
-              
-              return files;
-            }
-
-            const missingFiles = findMissingFiles();
-            core.setOutput('MISSING_SNAPSHOT_FILES', JSON.stringify(missingFiles));
-            console.log('Missing files:', missingFiles);
+            const { findMissingFiles } = await import('./.github/scripts/find-missing-snapshots.mjs');
+            await findMissingFiles();
 
       - name: Test Storybook
         id: test-run
@@ -137,29 +101,24 @@ jobs:
           E2E_TESTING_SECRET: ${{ secrets.E2E_TESTING_SECRET }}
           VERCEL_URL: ${{ github.event.deployment_status.target_url }}
 
-      - name: Ensure only missing snapshot files are updated
-        if: steps.snapshot-diff.outputs.MISSING_SNAPSHOT_FILES != ''
+      - name: Validate snapshot changes
+        if: steps.snapshot-diff.outputs.MISSING_SNAPSHOT_FILES != '[]'
         uses: actions/github-script@v7
+        id: validate-snapshots
         with:
           script: |
-            const { execSync } = require('child_process');
-            const missingFiles = JSON.parse(process.env.MISSING_SNAPSHOT_FILES).sort();
-
-            const changedFiles = execSync('git diff --name-only HEAD^ HEAD')
-              .toString()
-              .split('\n')
-              .filter(file => file.match(/src\/storybook-e2e\/__screenshots__\/storybook-screenshots\.spec\.ts\/linux\//))
-              .sort();
-
-            if (JSON.stringify(missingFiles) !== JSON.stringify(changedFiles)) {
-              console.log('Changed files:', changedFiles);
-              console.log('Missing files:', missingFiles);
-              core.setFailed('Changed files do not match exactly with missing files list');
+            try {
+              const { validateSnapshotChanges } = await import('./.github/scripts/validate-snapshot-changes.mjs');
+              await validateSnapshotChanges();
+            } catch (error) {
+              core.setFailed(`Failed to validate snapshot changes: ${error.message}`);
+              throw error;
             }
         env:
           MISSING_SNAPSHOT_FILES: ${{ steps.snapshot-diff.outputs.MISSING_SNAPSHOT_FILES }}
 
       - name: Commit snapshot changes
+        if: steps.validate-snapshots.outcome == 'success'
         uses: actions/github-script@v7
         with:
           script: |
